fix: header sections, and metric text alignment

--- a/tutorindigo/templates/indigo/lms/static/sass/course/_new-home.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/course/_new-home.scss
@@ -378,7 +378,6 @@ section.home {
 .whyUsWrapper {
   font-family: $inter-font-family;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   &__heading {
